data/forge_javadoc/1.7.10/raw/net/minecraft/world/storage/SaveFormatComparator.md
---
title: "SaveFormatComparator"
description: "public class SaveFormatComparator extends java.lang.Object implements java.lang.Comparable"
package: "net/minecraft/world/storage"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/storage/SaveFormatComparator.html"
sourceType: javadoc
---

# SaveFormatComparator

**Inheritance:** java.lang.Object → net.minecraft.world.storage.SaveFormatComparator

## Class signature

```java
public class SaveFormatComparator extends java.lang.Object implements java.lang.Comparable
```

## Constructors

- `SaveFormatComparator(java.lang.String p_i2161_1_, java.lang.String p_i2161_2_, long p_i2161_3_, long p_i2161_5_, WorldSettings.GameType p_i2161_7_, boolean p_i2161_8_, boolean p_i2161_9_, boolean p_i2161_10_)`

## Methods

- `int compareTo(java.lang.Object p_compareTo_1_)`
- `int compareTo(SaveFormatComparator p_compareTo_1_)`
- `long func_154336_c()`
- `boolean getCheatsEnabled()`
- `java.lang.String getDisplayName()`
- `WorldSettings.GameType getEnumGameType()`
- `java.lang.String getFileName()`
- `long getLastTimePlayed()`
- `boolean isHardcoreModeEnabled()`
- `boolean requiresConversion()`
